# espresso-polygon-zkevm-demo

./: .demo.env  .env  .gitignore  .gitmodules  Cargo.toml  README.md  cross-shell.nix  demo-docker-compose.yaml  deployment.json  docker-compose-anvil.yaml  docker-compose-blockscout.yaml  docker-compose-geth.yaml  docker-compose.yaml  flake.nix  foundry.toml  justfile  package.json  permissionless-docker-compose.yaml  services.yaml  standalone-docker-compose.yaml  zkevm-on-espresso-compose.yaml  zkevm-on-espresso.env
.github/workflows/: build.yml  build_static.yml  compose-end-to-end-test.yml  contracts-docker.yml  lint.yml  postgres-docker.yml  prover-docker.yml  slow-tests.yml  zkevm-dockers.yml
contract-bindings/: Cargo.toml
contract-bindings/src/: deploy.rs
doc/: architecture.puml  architecture_phase1.puml  architecture_phase2.puml  architecture_phase3.puml
docker/: faucet.Dockerfile  geth.Dockerfile  node.Dockerfile  polygon-zkevm-adaptor.Dockerfile  prover.Dockerfile  state-db.Dockerfile
docker/scripts/: zkevm-node.sh  zkevm-prover.sh
faucet/: Cargo.toml  README.md
faucet/src/: api.toml  discord.rs  faucet.rs  lib.rs  main.rs  web.rs
gen-bindings/: Cargo.toml
gen-bindings/src/: main.rs
hermez-adaptor/: Cargo.toml
hermez-adaptor/src/: demo.rs  demo_with_sequencer.rs  hermez.rs  json_rpc.rs  lib.rs  query_service.rs  random_client.rs
hermez-adaptor/tests/: end_to_end.rs
keygen/: Cargo.toml
keygen/src/: main.rs
polygon-zkevm-adaptor/: Cargo.toml
polygon-zkevm-adaptor/src/: demo.rs  demo_with_sequencer.rs  json_rpc.rs  lib.rs  main.rs  polygon_zkevm.rs  query_api.toml  query_service.rs  random_client.rs
polygon-zkevm-adaptor/tests/: end_to_end.rs
scripts/: build-docker-images  build-l1-image  check-architecture  copy-docker-images-to-host  demo-test-end-to-end  demo-with-profiles  deploy-zkevm-on-sequencer  query-service-blocks.sh  sepolia-local  source-dotenv  tmux-demo.sh  verify-contracts
zkevm/: Cargo.toml
zkevm-contract-bindings/: Cargo.toml
zkevm-contract-bindings/src/: deploy.rs  lib.rs
zkevm-contract-bindings/src/bindings/: mod.rs  shared_types.rs
zkevm-node-additions/: init_pool_db.sql  init_state_db.sql
zkevm/src/: lib.rs  polygon_zkevm.rs
