[package]
name = "faucet"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
derive_more = "0.99.17"
ethers = { version = "2.0.7", features = ["ws"] }
futures = "0.3.28"
regex = "1.8.4"
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
thiserror = "1.0.40"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"

[dev-dependencies]
async-compatibility-layer = { git = "https://github.com/EspressoSystems/async-compatibility-layer", tag = "1.2.0", features = ["logging-utils", "async-std-executor", "channel-async-std"] }
hermez-adaptor = { path = "../hermez-adaptor", features = ["testing"] }
sequencer-utils = { git = "ssh://git@github.com/EspressoSystems/espresso-sequencer.git" }
