[package]
name = "faucet"
version = "0.1.0"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-compatibility-layer = { git = "https://github.com/EspressoSystems/async-compatibility-layer", tag = "1.3.0", features = [
    "logging-utils",
    "async-std-executor",
    "channel-async-std",
] }
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
clap = "4.4.3"
ethers = { version = "2.0.7", features = ["ws"] }
futures = "0.3.28"
portpicker = "0.1.1"
regex = "1.8.4"
serde = "1.0.164"
serenity = { version = "0.11", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
surf-disco = { git = "https://github.com/EspressoSystems/surf-disco", tag = "v0.4.2" }
thiserror = "1.0.40"
tide-disco = { git = "https://github.com/EspressoSystems/tide-disco", tag = "v0.4.2" }
toml = "0.7"
tracing = "0.1.37"
url = "2.4.0"

[dev-dependencies]
polygon-zkevm-adaptor = { path = "../polygon-zkevm-adaptor", features = [
    "testing",
] }
sequencer-utils = { git = "https://github.com/EspressoSystems/espresso-sequencer.git" }
