[package]
name = "hermez-adaptor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zkevm-node"
required-features = ["testing"]

[[bin]]
name = "demo"
required-features = ["testing"]

[[bin]]
name = "load-test"
required-features = ["testing"]

[features]
testing = ["portpicker"]

[dependencies]
async-compatibility-layer = { git = "https://github.com/EspressoSystems/async-compatibility-layer", tag = "1.2.0", features = [
    "logging-utils",
] }
async-std = "1.12"
bincode = "1.3"
clap = { version = "4.3", features = ["derive", "env"] }
dotenvy = "0.15.6"
escargot = "0.5.7"
ethers = "2.0"
futures = "0.3"
hotshot-query-service = { git = "ssh://git@github.com/EspressoSystems/hotshot-query-service.git" }
hotshot-types = { git = "https://github.com/EspressoSystems/hotshot", features = ["async-std-executor", "channel-async-std"] }
http-types = "2.12.0"
jf-primitives = { git = "https://github.com/EspressoSystems/jellyfish" }
jsonrpc-v2 = "0.11.0"
sequencer = { git = "ssh://git@github.com/EspressoSystems/espresso-sequencer.git" }
sequencer-utils = { git = "ssh://git@github.com/EspressoSystems/espresso-sequencer.git" }
serde_json = "1.0.82"
surf = "2.3.2"
surf-disco = { git = "https://github.com/EspressoSystems/surf-disco", tag = "v0.4.1" }
tide = "0.16.0"
tide-disco = { git = "https://github.com/EspressoSystems/tide-disco", tag = "v0.4.1" }
toml = "0.7"
tracing = "0.1"
zkevm = { path = "../zkevm" }
zkevm-contract-bindings = { path = "../zkevm-contract-bindings" }

# Dependencies for feature "testing".
portpicker = { version = "0.1", optional = true }
rand = "0.8.5"
serde = "1.0.163"
snafu = "0.7.4"

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
commit = { git = "https://github.com/EspressoSystems/commit", tag = "0.2.2" }
portpicker = "0.1"
rand_chacha = "0.3"
sequencer = { git = "ssh://git@github.com/EspressoSystems/espresso-sequencer.git", features = ["testing"] }
tempfile = "3.4.0"
