[package]
name = "keygen"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.9", features = ["derive", "env"] }
eth-keystore = { version = "0.5.0", features = ["geth-compat"] }
ethers = "2.0.7"
rand = "0.8.5"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
