[package]
name = "polygon-zkevm-adaptor"
version = "0.1.0"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2021"
license = "GPL-3.0-or-later"

[[bin]]
name = "zkevm-node"
required-features = ["testing"]

[[bin]]
name = "load-test"
required-features = ["testing"]

[[bin]]
name = "load-test-deployment"
required-features = ["testing"]

[features]
testing = ["portpicker", "rand", "snafu"]
slow-tests = []

[dependencies]
async-compatibility-layer = { git = "https://github.com/EspressoSystems/async-compatibility-layer", tag = "1.4.1", features = [
    "logging-utils",
] }
async-std = "1.12"
bincode = "1.3"
clap = { version = "4.3", features = ["derive", "env"] }
dotenvy = "0.15.6"
escargot = "0.5.7"
ethers = { version = "2.0", features = ["ws"] }
futures = "0.3"
hotshot-query-service = { git = "https://github.com/EspressoSystems/hotshot-query-service", branch = "main" }
hotshot-types = { git = "https://github.com/EspressoSystems/hotshot", tag = "0.5.14" }
http-types = "2.12.0"
jsonrpc-v2 = "0.11.0"
sequencer = { git = "https://github.com/EspressoSystems/espresso-sequencer.git" }
sequencer-utils = { git = "https://github.com/EspressoSystems/espresso-sequencer.git" }
serde = "1.0"
serde_json = "1.0.82"
surf = "2.3.2"
surf-disco = { git = "https://github.com/EspressoSystems/surf-disco", tag = "v0.4.6" }
tide = "0.16.0"
tide-disco = { git = "https://github.com/EspressoSystems/tide-disco", tag = "v0.4.6" }
toml = "0.8"
tracing = "0.1"
zkevm = { path = "../zkevm" }
zkevm-contract-bindings = { path = "../zkevm-contract-bindings" }

# Dependencies for feature "testing".
portpicker = { version = "0.1", optional = true }
rand = { version = "0.8", optional = true }
snafu = { version = "0.7", optional = true }

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
commit = { git = "https://github.com/EspressoSystems/commit" }
portpicker = "0.1"
rand = "0.8"
rand_chacha = "0.3"
sequencer = { git = "https://github.com/EspressoSystems/espresso-sequencer.git", features = [
    "testing",
] }
snafu = "0.7"
tempfile = "3.4.0"
